# fish-species-recognition

./: CMakeLists.txt  LICENSE  README.md  fishspecies.cpp
src/: background.cpp  inference.cpp  utilities.cpp
src/include/: background.h  inference.h  parameters.h  utilities.h
